<resources>
    <string name="app_name">TSP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="unesite_broj_indeksa">Unesite broj indeksa</string>
    <string name="dalje">Dalje</string>
    <string name="hello_first_fragment">Glupost</string>
    <string name="raspored_nastave">Raspored nastave</string>
    <string name="raspored_kolokvijuma">Raspored kolokvijuma</string>
    <string name="raspored_ispita">Raspored ispita</string>
    <string name="raspored_pi">Raspored ŠPI</string>
    <string name="podaci_o_studentu">Podaci o studentu</string>
    <string name="title_activity_str2">str2</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
</resources>