<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="303dp"
        android:layout_height="39dp"
        android:background="#5594C6"
        android:text="@string/podaci_o_studentu"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="74dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="44dp"
        android:text="@string/raspored_nastave"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="145dp"
        android:layout_height="74dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="44dp"
        android:text="@string/raspored_kolokvijuma"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="145dp"
        android:layout_height="74dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="264dp"
        android:text="@string/raspored_ispita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="145dp"
        android:layout_height="74dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="264dp"
        android:text="@string/raspored_pi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button4" />
</androidx.constraintlayout.widget.ConstraintLayout>